--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -73,21 +73,14 @@
     "!pip install fastai2\n",
     "```\n",
     "\n",
-    "The difference between the 2 options is the use of the `!` in the case of Jupyter notebook. However, the result is the same, the fastai2 package will be install in the current active environment. "
+    "The difference between the 2 options is the use of the `!` in the case of Jupyter notebook. However, the result is the same, the fastai2 package will be install in the current active virtual environment. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Tip: If you use fastai2 (or any established python package), It is considered as good practice to freeze install a package: This means installing a specific version of a package (e.g `pip install torch== 1.4.0`). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ">Important: Following the best practices, it is importante to create and activate a virtual environment before installing any python package. Lacking to do so, the package will be installed in your current virtual environment. This means that most likely, it will be installed in the `base` virtual environment in Ananconda (`base` is the default virual environment created when you installed Anaconda)"
+    ">Important: Following the best practices, it is important to create and activate a virtual environment before installing any python package. Lacking to do so, the package will be installed in your current virtual environment. This means that most likely, it will be installed in the `base` virtual environment in Ananconda (`base` is the default virual environment created when you installed Anaconda). Check out the Appenix A here below."
    ]
   },
   {
@@ -111,6 +104,7 @@
     "base                     /home/farid/anaconda3\n",
     "fastai2                  /home/farid/anaconda3/envs/fastai2\n",
     "fastai2_dev           *  /home/farid/anaconda3/envs/fastai2_dev\n",
+    "fastai                   /home/farid/anaconda3/envs/fastai\n",
     "gluon                    /home/farid/anaconda3/envs/gluon\n",
     "prophet                  /home/farid/anaconda3/envs/prophet\n",
     "```\n"
@@ -158,9 +152,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It displays the package name, version number,  location where it was installed (with the name of the virtual environment: fastai2 is the name in my case), and other information.\n",
+    "It displays the package name, version number,  location where it was installed (with the name of the virtual environment: fastai2 is the name in my case), and some other information.\n",
     "\n",
-    ">Note: As of today (March 16th 2020), the fastai version found on the pypi repository is 0.0.11\n"
+    ">Note: At the present time (March 17th, 2020), the fastai version found on the pypi repository is **0.0.11**\n"
    ]
   },
   {
@@ -169,21 +163,21 @@
    "source": [
     "## Method 2\n",
     "\n",
-    ">Note: This method is used by users who are interested in new using the latest and the greatest features found the fastai2 Github repository. In general, they are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. If this sound a bit unclear, rest assured that everything will be crystal clear by the end of reading Method 3."
+    ">Note: This method is used by users who are interested in the latest and the greatest features found in the fastai2 Github repository. In general, those users are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. If this sound a bit unclear, everything will be crystal clear once you wil have read the Method 3 section."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The second method consists in installing the fastai2 package from the [fastai2 GitHub repository]( https://github.com/fastai/fastai2). It begs the question: Why would we be interested in doing so. The answer is simple: If a python package is heavy development and changed in the source coder are introduced on a regular basis, chances are the package found on the pypi repository is lagging behind. In order to use the latest and the greatest version you can just install fastai2 from its GitHub repository."
+    "The second method consists in installing the fastai2 package from the [fastai2 GitHub repository]( https://github.com/fastai/fastai2). This begs the question: Why would we be interested in doing so? The answer is simple: If a python package is under development, and changed in the source code are introduced on a regular basis, chances are the package found on the pypi repository is lagging behind. In order to use the latest fastai2 features you might just install fastai2 from its GitHub repository."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use a concrete example, at certain moment Jeremy shared a Kaggle kernel in order to show how to use a new developed module called medical. The latter was under development and was not available on the pypi repository. Therefore the solution was to advice the users to install the latest fastai2 version (that includes the medical module) by running the following command either on:\n",
+    "As illustration of a situation where this option is convenient, I will cite the example where Jeremy shared a Kaggle kernel whose purpose was to show how to use a new developed module called medical. The latter was under development, and was not available on the pypi repository. Therefore the solution was to advice the users to install the latest fastai2 version (that includes the medical module) by running the following command either on:\n",
     "\n",
     "1.\tthe terminal:\n",
     "```python\n",
@@ -200,11 +194,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might have already noticed that we replaced `fastai2` by ` git+https://github.com/fastai/fastai2.git` which means that you are installing the latest source code found in the fastai2 GitHub repository.\n",
+    "By comaparing the command above with the one used in method 1, you might have noticed that we replaced `fastai2` by ` git+https://github.com/fastai/fastai2.git`: this means that we are installing the latest source code found in the fastai2 GitHub repository.\n",
+    "\n",
     ">Important: When using this option, it is very important to also install the `fastcore` library` using the very same method:\n",
     "\n",
     "\n",
-    "from the command line:\n",
+    "The command shown, here below, should be sequentially run in order to align the 2 versions:\n",
     "```python\n",
     "pip install git+https://github.com/fastai/fastai2.git\n",
     "``` \n",
@@ -219,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may ask yourself why do we have to also install the fastcore library from GitHub given the fact that fastai2 will always install fastcore because it is part of its requirements. The answer is because fastai2 will install the latest version found in the pypi repository and not the latest version found on GitHub. If the fastai github version is using the new capabilities found in the fastcore latest GitHub version. This will lead to an incompatibility if you are using fastai latest GitHub version mixed with the fastcore pypi version, you will end up have some issues and some errors will surface. Therefore, better to have the habit to pip install both of them using the same method (method 2 in this case)"
+    "You may ask yourself why do we have to also install the fastcore library from GitHub given the fact that fastai2 will always install fastcore because it is part of its requirements. The answer relies on fact that fastai2 will install the latest version found in the **pypi repository** as opposed to the latest version found on **GitHub**. If the fastai2 GitHub version is using new features found in the fastcore latest GitHub version, it will lead to an incompatibility should you use fastai latest GitHub version combined with the fastcore pypi version: basically we are mixing 2 unaligned version. Consequently, we will end up experiencing some issues, and some errors will ultimately surface. Therefore, it is better to follow the good practice by pip installing both of them using the method described here above."
    ]
   },
   {
@@ -228,14 +223,14 @@
    "source": [
     "## Method 3\n",
     "\n",
-    ">Note: This method is used by developers who are actively building new modules that depends on fastai2. These developers are usually actively adding features to their modules and want to make sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one.\n"
+    ">Note: This method is used by developers who are actively building new modules that depends on fastai2 new features. Those developers are usually actively adding features to their modules and want to make sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one, at certain point of time.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal is to keep your library (which depends on fastai2) aligned to the fastai2 one hand, and to avoid to keep pip installing both fastai2 and fastcore every time new version are released (this would have been the case had we used Method 2). There exists a magic method (Method 3) that consists in using a so-called editable version of both fastai2 and fastcore."
+    "The goal is to keep our library (that depends on fastai2) aligned to the fastai2 one hand, and to avoid to keep pip installing both fastai2 and fastcore every time a new version is released (this would have been the case had we used Method 2). There exists a magic method (Method 3) that consists in using a so-called an editable version of the target python package (i.e. fastai2 and fastcore)"
    ]
   },
   {
@@ -243,6 +238,7 @@
    "metadata": {},
    "source": [
     "Installing an editable version of fastai2 is pretty straightforward. All we have to do is to follow these 3 simple steps, on a terminal console:\n",
+    "\n",
     "```python\n",
     "git clone https://github.com/fastai/fastai2\n",
     "cd fastai2\n",
@@ -254,14 +250,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Basically, we are cloning the fastai2 repository, then hopping into the fastai2 folder, finally issuing the command to pip install the package (fastai2) from the current folder (hence the use of the dot `.`) as an editable version by using the `-e` switch."
+    "Basically, we are cloning the fastai2 repository, then hopping into the cloned fastai2 folder, and finally issuing the command to pip install the package (fastai2) from the current folder (hence the use of the dot **.**) as an editable version by using the **-e** switch."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also to follow the same steps for the fastcore library:\n",
+    "We also have to follow the same steps for the fastcore library:\n",
     " \n",
     "```python\n",
     "git clone https://github.com/fastai/fastcore\n",
@@ -274,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For those following along and who are familiar with this option, they might notice that there is a discrepancy between this method and the one found on the fastai2 repository:\n",
+    "For those following along, and who are familiar with this option, they might notice there is a discrepancy between this method and the one found on the fastai2 repository (shown here below):\n",
     "\n",
     "```python\n",
     "git clone https://github.com/fastai/fastai2\n",
@@ -282,7 +278,7 @@
     "pip install -e \".[dev]\"\n",
     "```\n",
     "\n",
-    "Using the `[dev]` flag issue an order to the installer to pip install all the package listed under the dev requirements (`dev_requirements = nbdev`). This means the `nbdev` package (its a fastai package) will be installed from the pypi repository. Given the fact that nbdev is also under heavy development, we may experienced some issues caused by a misalignment between the 3 different fastai pacjkages being fastai2, fastcore, and nbdev. For that reason, it is desirable to also install the nbdev package as an editable package as follow:\n",
+    "The difference is the [dev] part. Using the `[dev]` flag issue an order to the installer to pip install all the packages listed under the dev requirements (`dev_requirements = nbdev`). This means the `nbdev` package (its a fastai package) will be installed from the pypi repository. Given the fact that nbdev is also under heavy development, we may experienced some issues caused by a misalignment between the 3 different fastai pacjkages being fastai2, fastcore, and nbdev. For that reason, it is desirable to also install the `nbdev` package as an editable package as follow:\n",
     "\n",
     "```python\n",
     "git clone https://github.com/fastai/nbdev\n",
@@ -295,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we installed our editable package, how are we going to update it. The answer is very straightforward, we pull our latest version from the corresponding GitHub repository. Therefore, for the fastai2 package, we just have to hop to the forder where we clone the original repo, and  we run the following command:\n",
+    "Now that we installed our editable package, how are we going to update it? The answer is very simple: we git pull our latest version from the corresponding GitHub repository. Therefore, for the fastai2 package, we just have to hop into its cloned forder and run the following command:\n",
     "\n",
     "```python\n",
     "git pull\n",
@@ -324,7 +320,14 @@
     "\n",
     "$ bash Anaconda3-2019.10-Linux-x86_64.sh\n",
     "$ source ~/.bashrc\n",
-    "```\n"
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Warning: Please replace the `Anaconda3-2019.10-Linux-x86_64.sh` by more recent filename found the [Anaconda installer archive]  (https://repo.continuum.io/archive/) ."
    ]
   },
   {
@@ -333,9 +336,9 @@
    "source": [
     "### On Windows\n",
     "\n",
-    "- Download Anaconda Windows installer [here](https://www.anaconda.com/distribution/#download-section) \n",
+    "- Download the [Anaconda Windows installer](https://www.anaconda.com/distribution/#download-section) \n",
     "- Select Python 3.6 or higher \n",
-    "- Run the installer and follow the instructions"
+    "- Run the installer, and follow the instructions"
    ]
   },
   {
@@ -361,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Tip: You can choose with version of python you would like to install. In the case above, the version 3.6 will be installed"
+    ">Tip: You can choose which version of python you would like to install. In the case here above, the version 3.6 will be installed"
    ]
   },
   {
@@ -378,7 +381,7 @@
     "- Install a python package (e.g. fastai2) from the pypi repository:\n",
     "\n",
     "```python\n",
-    "pip install fastai\n",
+    "pip install fastai2\n",
     "```\n",
     "\n",
     "- Uninstall a python package (e.g. fastai2):\n",
@@ -432,19 +435,19 @@
     "conda activate fastai2\n",
     "```\n",
     "\n",
-    "- List all the conda virtual environments\n",
+    "- List all the conda **virtual environments**\n",
     "\n",
     "```python\n",
     "conda env list\n",
     "```\n",
     "\n",
-    "- List all the packages installed in the current conda virtual environments\n",
+    "- List all the **packages** installed in the current conda virtual environments\n",
     "\n",
     "```python\n",
     "conda list\n",
     "```\n",
     "\n",
-    "- Install a python package (e.g. torch) from the pypi repository:\n",
+    "- Install a python package (e.g. torch) from the conda repository:\n",
     "\n",
     "```python\n",
     "conda install torch -c torch\n",
@@ -457,7 +460,7 @@
     "conda uninstall torch\n",
     "```\n",
     "\n",
-    "- List all the packages installed that start with `fast` in the current conda virtual environments\n",
+    "- List all the packages installed that start with the prefix `fast` in the current conda virtual environments\n",
     "\n",
     "```python\n",
     "conda list fast\n",
@@ -479,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel: **dev_0** indicating that they both are editable versions."
+    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel **dev_0**: it indicates that they both are editable versions."
    ]
   },
   {
@@ -487,15 +490,8 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
-    "This is an overview that describes 3 methods to install any released package. In this article, I described the fastai2 library use-case. fastai2 is still under development. I also explained the goal of each of these 3 methods, and how to select which method is more suitable to your specific use-case. "
+    "This is an overview that describes 3 methods to install any released package. In this article, I described the fastai2 library use-case. I also explained the goal of each of these 3 methods, and how to select the method that is more suitable to your specific use-case. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
