--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "# 3 ways to pip install a package - fastai2 use-case\n",
-    "> detailed description on how to pip install a package using 3 methods, and understand which method to use for your own use-case.\n",
+    "> A detailed description on how to pip install a package using 3 different methods, and understand which method to use for your own use-case.\n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
@@ -94,6 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "```python \n",
     "conda env list\n",
     "```\n",
@@ -371,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appendix C: Useful conda commands"
+    "## Appendix C: Useful pip commands"
    ]
   },
   {
