--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -328,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Warning: Please replace the `Anaconda3-2019.10-Linux-x86_64.sh` by more recent filename found the [Anaconda installer archive]  (https://repo.continuum.io/archive/) ."
+    "> Warning: Please replace the `Anaconda3-2019.10-Linux-x86_64.sh` by a more recent filename found in the [Anaconda installer archive]  (https://repo.continuum.io/archive/) ."
    ]
   },
   {
