--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appendix B: Create a conda virtual enviroment"
+    "## Appendix B: Create a conda enviroment"
    ]
   },
   {
@@ -492,6 +492,13 @@
    "source": [
     "## Conclusion\n",
     "This is an overview that describes 3 methods to install any released package. In this article, I described the fastai2 library use-case. I also explained the goal of each of these 3 methods, and how to select the method that is more suitable to your specific use-case. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DDD"
    ]
   }
  ]
