--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -87,13 +87,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I create on my local machine"
+    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I create on my local machine\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Run the following command:\n",
     "\n",
     "```python \n",
     "conda env list\n",
@@ -346,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appendix B: Create a conda enviroment"
+    "## Appendix B: Creating a conda enviroment"
    ]
   },
   {
