fixed merged areas

--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I create on my local machine\n"
+    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I create on my local machine"
    ]
   },
   {
@@ -394,8 +394,8 @@
     "\n",
     "- Show some information about a package (e.g. fastai2)\n",
     "\n",
-    "```\n",
-    "Pip show fastai2\n",
+    "```python\n",
+    "pip show fastai2\n",
     "```\n",
     "\n",
     "This is what it displayed on my machine, at the moment of publishing the present post:\n",
