deleted unused cell

--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -443,7 +443,7 @@
     "conda env list\n",
     "```\n",
     "\n",
-    "- List all the **packages** installed in the current conda virtual environments\n",
+    "- List all the **packages** installed in the current conda virtual environment\n",
     "\n",
     "```python\n",
     "conda list\n",
@@ -493,13 +493,6 @@
    "source": [
     "## Conclusion\n",
     "This is an overview that describes 3 methods to install any released package. In this article, I described the fastai2 library use-case. I also explained the goal of each of these 3 methods, and how to select the method that is more suitable to your specific use-case. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "DDD"
    ]
   }
  ]
