--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2- Install from GitHub - Non editable package\n",
+    "## 2- Install from GitHub - Non-editable package\n",
     "\n",
     ">Note: This method is used by users who are interested in the latest and the greatest features found in the fastai2 Github repository. In general, those users are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. If this sound a bit unclear, everything will be crystal clear once you wil have read the Method 3 section."
    ]
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Method 3\n",
+    "## 3- Install from GitHub - Editable package\n",
     "\n",
     ">Note: This method is used by developers who are actively building new modules that depends on fastai2 new features. Those developers are usually actively adding features to their modules and want to make sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one, at certain point of time.\n"
    ]
