--- a/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
+++ b/_notebooks/2020-03-17-how-to-pip-install-package.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "# 3 ways to pip install a package - fastai2 use-case\n",
-    "> A detailed description on how to pip install a package using 3 different methods, and understand which method to use for your own use-case.\n",
+    "> A detailed description on how to pip install a python package using 3 different methods, and to understand which method to use for your own use-case.\n",
     "\n",
     "- toc: true \n",
     "- badges: false\n",
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this article, I will show 3 methods to install the new fastai2 library using `pip install`. The 3 methods described here can be used to similar python libraries found on GitHub. I voluntarily omitted the `conda install` option because I wanted to focus on the methods that can be reproduced in any free cloud environment such as Google Colab.\n"
+    "In this article, I will show 3 methods to install the new fastai2 library using `pip install`. The 3 methods described here can be used to similar python libraries found on GitHub. I voluntarily omitted the `conda install` option because I wanted to focus on the methods that can be reproduced in any free cloud environment such as Google Colab or Kaggle.\n"
    ]
   },
   {
@@ -51,17 +51,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1- Install from pypi repository\n",
-    ">Note: The first method is the most common way to install a stable version of a python package. It will be widely used once fastai2 will be officially released.\n"
+    "## 1- Installing from pypi repository\n",
+    ">Note: The first method is the most common way to install a stable version of a python package. It will be the recommeded one once fastai2 will be officially released.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although, fastai2 is still under development and its official release is expected to be during the next summer, it is important to be familiar with this first method especially if you intend to use fastai2 in a production setting. \n",
+    "Although, fastai2 is still under development and its official release is expected to be during the next summer, it is important to be familiar with this first method especially if you intend to use fastai2 in a production environment. \n",
     "\n",
-    "To install fastai2 from [fastai2 pypi repository] (https://pypi.org/project/fastai2/), type the following command either from:\n",
+    "To install fastai2 from [fastai2 pypi repository](https://pypi.org/project/fastai2/), type the following command either from:\n",
     "\n",
     "1.\tthe terminal:\n",
     "```shell\n",
@@ -80,25 +80,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Important: Following the best practices, it is important to create and activate a virtual environment before installing any python package. Lacking to do so, the package will be installed in your current virtual environment. This means that most likely, it will be installed in the `base` virtual environment in Ananconda (`base` is the default virual environment created when you installed Anaconda). Check out the Appenix A here below."
+    ">Important: Following the best practices, it is important to create and activate a virtual environment before installing any python package. Lacking to do so, the package will be installed in your current virtual environment. This means that most likely, it will be installed in the `base` virtual environment in Ananconda (`base` is the default virual environment created when you installed Anaconda). Check out the Appendices A and B, here below, on how to respectively install and create a virtual environment."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I create on my local machine"
+    "> Tip: You can create several virtual environments on the same machine. The following is the output of the different virtual environments that I created on my local machine"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the following command:\n",
+    "Running the following command:\n",
     "\n",
     "```python \n",
     "conda env list\n",
     "```\n",
+    "outputs the list of my current virtual environments:\n",
     "\n",
     "```python\n",
     "# conda environments:\n",
@@ -163,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2- Install from GitHub - Non-editable package\n",
+    "## 2- Install from GitHub- Non-editable package\n",
     "\n",
     ">Note: This method is used by users who are interested in the latest and the greatest features found in the fastai2 Github repository. In general, those users are interested in using the latest fastai2 package without the intention to build new modules that can be used as fastai2 extensions. If this sound a bit unclear, everything will be crystal clear once you wil have read the Method 3 section."
    ]
@@ -172,14 +173,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The second method consists in installing the fastai2 package from the [fastai2 GitHub repository]( https://github.com/fastai/fastai2). This begs the question: Why would we be interested in doing so? The answer is simple: If a python package is under development, and changed in the source code are introduced on a regular basis, chances are the package found on the pypi repository is lagging behind. In order to use the latest fastai2 features you might just install fastai2 from its GitHub repository."
+    "The second method consists in installing the fastai2 package from the [fastai2 GitHub repository]( https://github.com/fastai/fastai2). This begs the question: Why would we be interested in doing so? The answer is simple: If a python package is under development, and changes in the source code are introduced on a regular basis, chances are the package found on the pypi repository is lagging behind. In order to use the latest fastai2 features you need to install fastai2 from its GitHub repository."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As illustration of a situation where this option is convenient, I will cite the example where Jeremy shared a Kaggle kernel whose purpose was to show how to use a new developed module called medical. The latter was under development, and was not available on the pypi repository. Therefore the solution was to advice the users to install the latest fastai2 version (that includes the medical module) by running the following command either on:\n",
+    "As illustration of a situation where this option is convenient, I will cite the example where Jeremy shared a Kaggle kernel in which he wanted to show how to use a new developed module called medical. The latter was under development, and was not available on the pypi repository. Therefore the solution was to install the latest fastai2 version (that includes the medical module) by running the following command either on:\n",
     "\n",
     "1.\tthe terminal:\n",
     "```python\n",
@@ -196,12 +197,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By comaparing the command above with the one used in method 1, you might have noticed that we replaced `fastai2` by ` git+https://github.com/fastai/fastai2.git`: this means that we are installing the latest source code found in the fastai2 GitHub repository.\n",
+    "By comaparing the command above with the one used in method 1, you might have noticed that we replaced `fastai2` by ` git+https://github.com/fastai/fastai2.git`: this means that we are directly installing the latest source code found in the fastai2 GitHub repository.\n",
     "\n",
-    ">Important: When using this option, it is very important to also install the `fastcore` library` using the very same method:\n",
+    ">Important: When using this option, it is very important to also install the `fastcore` library using the very same method:\n",
     "\n",
     "\n",
     "The command shown, here below, should be sequentially run in order to align the 2 versions:\n",
+    "\n",
+    "either from terminal:\n",
     "```python\n",
     "pip install git+https://github.com/fastai/fastai2.git\n",
     "``` \n",
@@ -216,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may ask yourself why do we have to also install the fastcore library from GitHub given the fact that fastai2 will always install fastcore because it is part of its requirements. The answer relies on fact that fastai2 will install the latest version found in the **pypi repository** as opposed to the latest version found on **GitHub**. If the fastai2 GitHub version is using new features found in the fastcore latest GitHub version, it will lead to an incompatibility should you use fastai latest GitHub version combined with the fastcore pypi version: basically we are mixing 2 unaligned version. Consequently, we will end up experiencing some issues, and some errors will ultimately surface. Therefore, it is better to follow the good practice by pip installing both of them using the method described here above."
+    "You may ask yourself why do we have to also install the fastcore library from GitHub given the fact that fastai2 will always install fastcore because it is part of its requirements. The answer relies on fact that fastai2 will install the latest version found in the **pypi repository** as opposed to the latest version found on **GitHub**. If the fastai2 GitHub version is using new features found in the fastcore latest GitHub version, it will lead to an incompatibility if you use fastai2 latest GitHub version combined with the fastcore pypi version: basically, if we had done so we would have been mixing 2 misaligned versions. Consequently, we will end up experiencing some issues, and some errors will ultimately surface. Therefore, it is better to follow the good practice by pip installing both of them using the method described here above."
    ]
   },
   {
@@ -225,7 +228,7 @@
    "source": [
     "## 3- Install from GitHub - Editable package\n",
     "\n",
-    ">Note: This method is used by developers who are actively building new modules that depends on fastai2 new features. Those developers are usually actively adding features to their modules and want to make sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one, at certain point of time.\n"
+    ">Note: This method is used by developers who are actively building new modules that depends on fastai2 new features. Those developers are usually either 1) actively contributing to fastai2 project by adding new features or fixing bugs, or 2) creating their own modules, and making sure that their source code stay in sync with the fastai2 latest version. Lacking to do so, they will realize that their code is incompatible with fastai2 one, at certain point of time.\n"
    ]
   },
   {
@@ -280,7 +283,7 @@
     "pip install -e \".[dev]\"\n",
     "```\n",
     "\n",
-    "The difference is the [dev] part. Using the `[dev]` flag issue an order to the installer to pip install all the packages listed under the dev requirements (`dev_requirements = nbdev`). This means the `nbdev` package (its a fastai package) will be installed from the pypi repository. Given the fact that nbdev is also under heavy development, we may experienced some issues caused by a misalignment between the 3 different fastai pacjkages being fastai2, fastcore, and nbdev. For that reason, it is desirable to also install the `nbdev` package as an editable package as follow:\n",
+    "The difference is the [dev] part. Using the `[dev]` flag issue an order to the installer to pip install all the packages listed under the dev requirements (`dev_requirements = nbdev`). This means the `nbdev` package (its a fastai package) will be installed from the pypi repository. Given the fact that nbdev is also under heavy development, we may experienced some issues caused by a misalignment between the 3 different fastai packages being fastai2, fastcore, and nbdev. For that reason, it is desirable to also install the `nbdev` package as an editable package as follow:\n",
     "\n",
     "```python\n",
     "git clone https://github.com/fastai/nbdev\n",
@@ -298,7 +301,7 @@
     "```python\n",
     "git pull\n",
     "```\n",
-    "This command will both update our repo and update our editable package has the version changed. We have to run the command, here above, for both fastai2 and fastcore.\n"
+    "This command will both update our cloned version of the fastai2 repository and update our editable package had its version changed. We have to run the command, here above, for both fastai2 and fastcore.\n"
    ]
   },
   {
@@ -329,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Warning: Please replace the `Anaconda3-2019.10-Linux-x86_64.sh` by a more recent filename found in the [Anaconda installer archive]  (https://repo.continuum.io/archive/) ."
+    "> Warning: Please replace the `Anaconda3-2019.10-Linux-x86_64.sh` by a more recent filename found in the [Anaconda installer archive] (https://repo.continuum.io/archive/) ."
    ]
   },
   {
@@ -354,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On both Linux and Windows run the following commands:\n",
+    "On either Linux and Windows run the following commands:\n",
     "\n",
     "```python\n",
     "conda create -n fastai2 python=3.6 anaconda\n",
@@ -366,7 +369,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Tip: You can choose which version of python you would like to install. In the case here above, the version 3.6 will be installed"
+    ">Tip: You can choose which version of python you would like to install. In the case here above, the version 3.6 will be installed."
    ]
   },
   {
@@ -377,8 +380,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "- Install a python package (e.g. fastai2) from the pypi repository:\n",
     "\n",
@@ -398,7 +403,7 @@
     "pip show fastai2\n",
     "```\n",
     "\n",
-    "This is what it displayed on my machine, at the moment of publishing the present post:\n",
+    "This is what it displayed on my loacl machine, at the moment I published the present post:\n",
     "\n",
     "```python\n",
     "Name: fastai2\n",
@@ -411,7 +416,7 @@
     "Location: /home/farid/anaconda3/envs/fastai2/lib/python3.6/site-packages\n",
     "Requires: scikit-learn, pandas, fastprogress, requests, scipy, pillow, torchvision, matplotlib, pyyaml, spacy, torch, fastcore\n",
     "Required-by:\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -443,12 +448,6 @@
     "conda env list\n",
     "```\n",
     "\n",
-    "- List all the **packages** installed in the current conda virtual environment\n",
-    "\n",
-    "```python\n",
-    "conda list\n",
-    "```\n",
-    "\n",
     "- Install a python package (e.g. torch) from the conda repository:\n",
     "\n",
     "```python\n",
@@ -462,7 +461,13 @@
     "conda uninstall torch\n",
     "```\n",
     "\n",
-    "- List all the packages installed that start with the prefix `fast` in the current conda virtual environments\n",
+    "- List all the **packages** installed in the current conda virtual environment\n",
+    "\n",
+    "```python\n",
+    "conda list\n",
+    "```\n",
+    "\n",
+    "- List all the packages installed that start with the prefix `fast` in the current conda virtual environment\n",
     "\n",
     "```python\n",
     "conda list fast\n",
@@ -484,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel **dev_0**: it indicates that they both are editable versions."
+    "> Note: You might have noticed that both my fastai2 and fastcore package share the same name of the Build Channel **dev_0**: this indicates that they both are editable versions."
    ]
   },
   {
